# gigyzer

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
gigyzer/: __main__.py  app.py
gigyzer/configs/: env.py
gigyzer/database/: __init__.py  database.py
gigyzer/database/models/: base.py  users.py
gigyzer/database/schemas/: user.py
gigyzer/database/services/: users.py
gigyzer/handlers/: commands.py
gigyzer/utils/: __init__.py  gigachat.py
